# loom

./: .gitignore
make/: RunTests.gmk
make/conf/: jib-profiles.js
make/nb_native/nbproject/: configurations.xml
src/hotspot/share/classfile/: javaClasses.cpp
src/hotspot/share/jfr/support/: jfrThreadId.hpp
src/hotspot/share/oops/: instanceClassLoaderKlass.hpp
src/hotspot/share/prims/: jvmtiEnvBase.cpp  jvmtiEnvThreadState.cpp  whitebox.cpp
src/hotspot/share/utilities/: globalDefinitions.hpp
src/jdk.jdwp.agent/: CMakeLists.txt
src/jdk.jdwp.agent/share/native/libjdwp/: commonRef.c  debugInit.c  eventHandler.c  log_messages.c  log_messages.h  threadControl.c
test/hotspot/jtreg/: ProblemList-fiber.txt  ProblemList-vthread.txt  ProblemList.txt
test/hotspot/jtreg/compiler/inlining/: InlineAccessors.java
test/hotspot/jtreg/compiler/jsr292/: ContinuousCallSiteTargetChange.java  MHInlineTest.java  PollutedTrapCounts.java
test/hotspot/jtreg/gc/: TestAgeOutput.java  TestNumWorkerOutput.java  TestSmallHeap.java
test/hotspot/jtreg/gc/arguments/: DetermineMaxHeapForCompressedOops.java  ErgoArgsPrinter.java  TestMaxHeapSizeTools.java  TestUseCompressedOopsErgoTools.java
test/hotspot/jtreg/gc/g1/: TestEagerReclaimHumongousRegionsLog.java  TestG1TraceEagerReclaimHumongousObjects.java  TestGCLogMessages.java  TestHumongousAllocNearlyFullRegion.java  TestPLABOutput.java  TestPeriodicLogMessages.java  TestRemsetLoggingTools.java  (+4 more)
test/jdk/: ProblemList-fiber.txt  ProblemList-vthread.txt  ProblemList.txt
test/langtools/: ProblemList-fiber.txt
(+64 files in other folders)
